--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h2>Login</h2>
         <form action="/login" method="POST">
-            <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username" required><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password" required><br><br>
+            <!-- <label for="username">Username:</label><br> -->
+            <input type="text" id="username" name="username" placeholder="username" required><br>
+            <!-- <label for="password">Password:</label><br> -->
+            <input type="password" id="password" name="password" placeholder="password" required><br><br>
             <input type="submit" value="Login">
         </form>
         <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up here</a>.</p>
