--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='signup.css') }}">
 </head>
 <body>
     <div class="container">
         <h2>Sign Up</h2>
         <form action="/signup" method="POST">
-            <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username" required><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password" required><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+            <!-- <label for="username">Username:</label><br> -->
+            <input type="text" id="username" name="username" placeholder="username" required><br>
+            <!-- <label for="password">Password:</label><br> -->
+            <input type="password" id="password" name="password" placeholder="password" required><br>
+            <!-- <label for="email">Email:</label><br> -->
+            <input type="email" id="email" name="email" placeholder="email" required><br><br>
             <input type="submit" value="Sign Up">
         </form>
         <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a>.</p>
